Fix stray punctuation within test script

--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -70,7 +70,7 @@ jobs:
           - AddTag Catalogue:CT_ImageTable StudyDate null
           - AddTag Catalogue:CT_*Table SeriesDate null
           - AddTag Catalogue:CT_*Table SeriesDate null
-          - AddTag Catalogue:CT_*Table SeriesDate null      -   
+          - AddTag Catalogue:CT_*Table SeriesDate null
           - CreateNewImagingDatasetSuite "DatabaseType:MicrosoftSqlServer:Name:ImagingTest2:Server=(localdb)\MSSQLLocalDB;Integrated Security=true;Encrypt=yes;TrustServerCertificate=true" ./data DicomFileCollectionSource CT_ CT.it false true
           EOC
       - name: Store created nupkg files
