--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -55,3 +55,9 @@ jobs:
             -**/RDMP/**
           input: sarif-results/csharp.sarif
           output: sarif-results/csharp.sarif
+
+      - name: Upload SARIF
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: sarif-results/java.sarif
+
