--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -59,5 +59,5 @@ jobs:
       - name: Upload SARIF
         uses: github/codeql-action/upload-sarif@v2
         with:
-          sarif_file: sarif-results/java.sarif
+          sarif_file: sarif-results/csharp.sarif
 
