--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -23,9 +23,10 @@ jobs:
         language: [ csharp ]
 
     steps:
-      - name: Checkout
+      - name: Checkout RdmpDicom source
         uses: actions/checkout@v3
-      - uses: actions/checkout@v3
+      - name: Checkout RDMP source
+        uses: actions/checkout@v3
         with:
           repository: HicServices/RDMP
           ref: feature/rc4
