--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -11,8 +11,10 @@ jobs:
   package:
     runs-on: windows-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/checkout@v3
+      - name: Checkout RdmpDicom source
+        uses: actions/checkout@v3
+      - name: Checkout RDMP source
+        uses: actions/checkout@v3
         with:
           repository: HicServices/RDMP
           ref: feature/rc4
