--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -23,8 +23,14 @@ jobs:
         language: [ csharp ]
 
     steps:
-      - name: Checkout
+      - name: Checkout RdmpDicom source
         uses: actions/checkout@v3
+      - name: Checkout RDMP source
+        uses: actions/checkout@v3
+        with:
+          repository: HicServices/RDMP
+          ref: feature/rc4
+          path: RDMP
 
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v2
@@ -39,3 +45,20 @@ jobs:
         uses: github/codeql-action/analyze@v2
         with:
           category: "/language:${{ matrix.language }}"
+          upload: False
+          output: sarif-results
+
+      - name: filter-sarif
+        uses: advanced-security/filter-sarif@v1
+        with:
+          patterns: |
+            +**/*
+            -**/RDMP/**
+          input: sarif-results/csharp.sarif
+          output: sarif-results/csharp.sarif
+
+      - name: Upload SARIF
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: sarif-results/csharp.sarif
+
