--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -2,14 +2,14 @@ version: 2
 updates:
 - package-ecosystem: "github-actions"
   directory: "/"
-  target-branch: develop
   schedule:
-    interval: daily
+    interval: weekly
+  reviewers:
+    - SMI/reviewers
 - package-ecosystem: nuget
   directory: "/"
   schedule:
-    interval: daily
-  open-pull-requests-limit: 10
-  target-branch: develop
+    interval: weekly
+  open-pull-requests-limit: 99
   reviewers:
-  - jas88
+    - SMI/reviewers
