--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: HicServices/RDMP
-          ref: hotfix/loggingid
+          ref: develop
           path: RDMP
       - uses: actions/setup-dotnet@v3
         with:
