--- a/Rdmp.Dicom/Rdmp.Dicom.csproj
+++ b/Rdmp.Dicom/Rdmp.Dicom.csproj
@@ -1,38 +1,38 @@
 <Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <PackageId>HIC.Rdmp.Dicom</PackageId>
-    <RootNamespace>Rdmp.Dicom</RootNamespace>
-    <AssemblyName>Rdmp.Dicom</AssemblyName>
-    <TargetFramework>net7.0</TargetFramework>
-    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-  </PropertyGroup>
-  <ItemGroup>
-    <None Remove="db\runAfterCreateDatabase\CreateSMIPluginDatabase.sql" />
-    <None Remove="db\up\001_AddIsExternalReferenceFlag.sql" />
-    <None Remove="db\up\002_ImagesToLoadList.sql" />
-    <None Remove="db\up\003_Quarantine.sql" />
-    <None Remove="db\up\004_TagPromotionConfiguration.sql" />
-    <None Remove="db\up\005_EnsureUIDMapUnique.sql" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="..\SharedAssemblyInfo.cs" Link="SharedAssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="db\runAfterCreateDatabase\CreateSMIPluginDatabase.sql" />
-    <EmbeddedResource Include="db\up\001_AddIsExternalReferenceFlag.sql" />
-    <EmbeddedResource Include="db\up\002_ImagesToLoadList.sql" />
-    <EmbeddedResource Include="db\up\003_Quarantine.sql" />
-    <EmbeddedResource Include="db\up\004_TagPromotionConfiguration.sql" />
-    <EmbeddedResource Include="db\up\005_EnsureUIDMapUnique.sql" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="HIC.DicomTypeTranslation" Version="4.0.3" />
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\RDMP\Rdmp.Core\Rdmp.Core.csproj" />
-  </ItemGroup>
+	<PropertyGroup>
+		<PackageId>HIC.Rdmp.Dicom</PackageId>
+		<RootNamespace>Rdmp.Dicom</RootNamespace>
+		<AssemblyName>Rdmp.Dicom</AssemblyName>
+		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+		<NuGetAudit>false</NuGetAudit>
+	</PropertyGroup>
+	<ItemGroup>
+		<None Remove="db\runAfterCreateDatabase\CreateSMIPluginDatabase.sql" />
+		<None Remove="db\up\001_AddIsExternalReferenceFlag.sql" />
+		<None Remove="db\up\002_ImagesToLoadList.sql" />
+		<None Remove="db\up\003_Quarantine.sql" />
+		<None Remove="db\up\004_TagPromotionConfiguration.sql" />
+		<None Remove="db\up\005_EnsureUIDMapUnique.sql" />
+	</ItemGroup>
+	<ItemGroup>
+		<Compile Include="..\SharedAssemblyInfo.cs" Link="SharedAssemblyInfo.cs" />
+	</ItemGroup>
+	<ItemGroup>
+		<EmbeddedResource Include="db\runAfterCreateDatabase\CreateSMIPluginDatabase.sql" />
+		<EmbeddedResource Include="db\up\001_AddIsExternalReferenceFlag.sql" />
+		<EmbeddedResource Include="db\up\002_ImagesToLoadList.sql" />
+		<EmbeddedResource Include="db\up\003_Quarantine.sql" />
+		<EmbeddedResource Include="db\up\004_TagPromotionConfiguration.sql" />
+		<EmbeddedResource Include="db\up\005_EnsureUIDMapUnique.sql" />
+	</ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="HIC.DicomTypeTranslation" Version="4.0.3" />
+		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+	</ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\RDMP\Rdmp.Core\Rdmp.Core.csproj" />
+	</ItemGroup>
 </Project>
