--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -69,7 +69,7 @@ jobs:
           rm -f p/main/fr-FR/Terminal.Gui.resources.dll
           rm -f p/main/pt-PT/Terminal.Gui.resources.dll
           7z a -tzip Rdmp.Dicom.${{ steps.version.outputs.version }}.nupkg plugin.nuspec p
-          dotnet pack Rdmp.Dicom/Rdmp.Dicom.csproj -c Release -p:Version=${{ steps.version.outputs.version }} --include-source --include-symbols -o .
+          dotnet pack Rdmp.Dicom/Rdmp.Dicom.csproj -c Release -p:Version=${{ steps.version.outputs.version }} -p:SymbolPackageFormat=snupkg --include-source --include-symbols -o .
           cat > testcmd.yaml <<-EOC
           Commands:
           - listsupportedcommands
