--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -68,9 +68,9 @@ jobs:
           rm -f p/main/ja-JP/Terminal.Gui.resources.dll
           rm -f p/main/fr-FR/Terminal.Gui.resources.dll
           rm -f p/main/pt-PT/Terminal.Gui.resources.dll
-          7z a -tzip Rdmp.Dicom.${{ steps.version.outputs.version }}.nupkg plugin.nuspec p
           7z a -tzip Rdmp.Dicom.${{ steps.version.outputs.version }}.rdmp plugin.nuspec p
           dotnet pack Rdmp.Dicom/Rdmp.Dicom.csproj -c Release -p:Version=${{ steps.version.outputs.version }} -p:SymbolPackageFormat=snupkg --include-source --include-symbols -o .
+          cp Rdmp.Dicom.${{ steps.version.outputs.version }}.rdmp Rdmp.Dicom.${{ steps.version.outputs.version }}.nupkg
           cat > testcmd.yaml <<-EOC
           Commands:
           - listsupportedcommands
