--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -39,7 +39,7 @@ jobs:
           queries: +security-and-quality
 
       - name: Autobuild
-        uses: github/codeql-action/autobuild@v3
+        run: dotnet build -c Debug
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v3
